--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/ibeacon": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/text-to-speech": "^5.6.0",
     "@ionic/angular": "^4.0.0",
     "com.unarin.cordova.beacon": "git+https://github.com/petermetz/cordova-plugin-ibeacon.git",
     "cordova-android": "7.1.4",
@@ -35,14 +36,17 @@
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-tts": "0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "graph-data-structure": "^1.8.0",
+    "node-dijkstra": "^2.5.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/build-angular": "^0.13.7",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
@@ -50,9 +54,9 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
-    "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^10.14.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -78,7 +82,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "com.unarin.cordova.beacon": {},
-      "cordova-plugin-eddystone": {}
+      "cordova-plugin-eddystone": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "android"
